--- a/backend/example.env
+++ b/backend/example.env
@@ -1,2 +1,3 @@
+# this .env is for the backend
 # This is the example that you should copy into your own .env file and fill in the info
-PORT=Port number goes here
+export PORT=Port number goes here
