--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       - /app/node_modules # Don't overwrite node_modules
     env_file:
       - ./backend/.env # Load environment variables
+    environment:
+      - CHOKIDAR_USEPOLLING=true # Enable file polling for nodemon
+      - WATCHPACK_POLLING=true # Helps if using webpack/vite later
+      - CHOKIDAR_INTERVAL=200
     command: npm run dev # Run nodemon for live reload
     networks:
       - app_network # Shared network between frontend/backend
@@ -28,6 +32,9 @@ services:
       - /app/node_modules
     env_file:
       - ./frontend/.env
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true
     command: npm run dev # Runs Vite dev server
     depends_on:
       - backend # Wait until backend starts
